<resources>
    <string name="app_name">Gas Price Tracker</string>
    <string name="price_title_hint">Enter station name</string>
    <string name="price_title_label">Gas Station Name</string>
    <string name="price_details_label">Price</string>
    <string name="date_picker_title">Date of price:</string>
    <string name="new_price">New price</string>
    <string name="delete_price">Delete price</string>
    <string name="show_subtitle">Show Price Count</string>
    <string name="hide_subtitle">Hide Price Count</string>
    <string name="subtitle_format">%1$d prices</string>
    <string name="report_prices_text">Report prices</string>
    <string name="share_price_text">Share this price</string>
    <string name="price_report">Wow, check out this sweet deal! %1$s has %2$s gas! This price was reported on %3$s. </string>
    <string name="price_report_subject">GasPriceTracker Price Report</string>
    <string name="send_report">Share this price via</string>
    <string name="price_title">Price Title</string>
    <string name="price_header">Gas Prices</string>
    <string name="price_date">Price Date</string>
    <string name="view_prices_text">View Price List</string>
    <string name="price_hint">0.00</string>
    <string name="submit_price">Submit Price</string>
    <string name="edit_price_text">Confirm edit</string>
    <string name="view_price_map">View Price Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_question">Are you sure you want to delete this price?"</string>
    <string name="dollar_sign">$</string>
    <string name="search">Find a gas station near you</string>
    <string name="price_sort">Sort with lower price</string>
    <string name="default_location">latitude: longitude:</string>
    <string name="added_price_success">Added price successfully!</string>
    <string name="location_field_label">Location</string>
    <string name="date_field_label">Date Submitted</string>
    <string name="default_order">Chronological order</string>
    <string name="price_placeholder">$p</string>
    <string name="title_activity_maps2">Map</string>
    <string name="location_info">Location Info</string>
    <string name="location_desc">Tap the location button in the app bar top right to pin this price to your location.</string>
    <string name="new_price_fragment_header">Report New Gas Price</string>
    <string name="edit_price_success">Edited price successfully!</string>
    <string name="priceimage_content_description">priceImage</string>
    <string name="optional_image_hint">Optionally upload a photo to represent the gas station.</string>
</resources>