<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_title_label"/>

    <EditText
        android:id="@+id/price_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price_title_hint"
        android:inputType="text" />

    <Button
        android:id="@+id/price_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_price" />

</LinearLayout>